# task_terminator

./: Dockerfile  README.md  db.sqlite3  fly.toml  manage.py  pyproject.toml
main_app/: forms.py  models.py  urls.py  views.py
main_app/migrations/: 0001_initial.py  0002_alter_task_completed_alter_task_date_added.py  0003_alter_task_options_alter_task_date_added.py  0004_alter_task_date_added.py
main_app/static/css/: style.css
main_app/static/static/: style.css
main_app/templates/: base.html  home.html
main_app/templates/main_app/: change_password.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
main_app/templates/registration/: login.html  signup.html
main_app/templates/tasks/: index.html
main_app/templates/user/: index.html  update.html
task_terminator/: asgi.py  settings.py  urls.py  wsgi.py
