[tool.poetry]
name = "task-terminator"
version = "0.1.0"
description = ""
authors = ["Anthony Siletti <asiletti@icloud.com>"]
readme = "README.md"
packages = [{include = "task_terminator"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
