[tool.poetry]
name = "task-terminator"
version = "0.1.0"
description = ""
authors = ["Anthony Siletti <asiletti@icloud.com>"]
readme = "README.md"
packages = [{include = "task_terminator"}]

[tool.poetry.dependencies]
python = "^3.10"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
twilio = "^7.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
