[tool.poetry]
name = "task-terminator"
version = "0.1.0"
description = ""
authors = ["Anthony Siletti <asiletti@icloud.com>"]
readme = "README.md"
packages = [{include = "task_terminator"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.5"
dj-database-url = "^1.2.0"
daphne = "^4.0.0"
psycopg2-binary = "^2.9.5"
boto3 = "^1.26.48"
django-environ = "^0.9.0"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.7"
twilio = "^7.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
